pocicionamiento en diseño

--- a/4_intro_css/webconcss.html
+++ b/4_intro_css/webconcss.html
@@ -6,7 +6,14 @@
     </head>
     <body>
         <h1>custom style sheet </h1>
-        
-        <p>parrafo</p>
+        <h1 class="principal">parrafo principal</h1><!--definir clase con bariable-->
+        <p id="parrafo1">parrafo1</p><!--definir id con bariable-->
+        <p id="parrafo2">parrafo2</p>
+        <button class="todo">todo</button>
+        <div>
+            <p class="nombre">pablo</p>
+            <p class="apellido">colina</p>
+        </div>
     </body>
 </html>
+<!-- -->
