--- a/portafolio/portafolio.html
+++ b/portafolio/portafolio.html
@@ -21,14 +21,14 @@
     </div>
     <div class="presentacion">
         <div class="decorar_imagen">
-            <img src="img/ilustracion.jpg" alt="foto de programado">
+            <img src="img/peter.jpg" alt="foto de programado">
             
         </div>
         <div class="decorar">
             <div class="texto">
                 <samp>
-                soy peter bustamante estudiante de tercer cemestre en analista y programador de sofware 
-                del sena
+                    alalizta y programador de software amateur ,estudiante  
+        
                 </samp>
             </div> 
         </div>    
